Time: 9 ms (47.23%), Space: 46.5 MB (84.07%) - LeetHub